# multi_uav_simulator

./: .gitignore  CMakeLists.txt  package.xml  readme.md
cf_description/: crazyflie.urdf.xacro  crazyflie2.dae
cf_description/urdf/: cf1.urdf.xacro  cf10.urdf.xacro  cf11.urdf.xacro  cf12.urdf.xacro  cf2.urdf.xacro  cf3.urdf.xacro  cf4.urdf.xacro  cf5.urdf.xacro  cf6.urdf.xacro  cf7.urdf.xacro  cf8.urdf.xacro  cf9.urdf.xacro
config/: bigquad_params.yaml  cf_config.yaml  config.yaml  crazyflie_params.yaml  custom_rosconsole.conf  initial_conditions_2.yaml  simulation.rviz
geo_controller/: CMakeLists.txt  package.xml
geo_controller/include/geo_controller/: controllerImpl.h  definitions.h
geo_controller/src/: controllerImpl.cpp  definitions.cpp
include/mavswarm2/: definitions.hpp  dynamics_provider.h  dynamics_provider.hpp  quadrotor.h  quadrotor.hpp  trajectory_t.h  types.hpp  utils.h  utils.hpp
include/mavswarm2/controller/: controllerImpl.hpp  geometric_controller.hpp
include/multi_uav_simulator/: DynamicsProvider.h  Quadrotor.h  Trajectory_t.h
launch/: quadrotor.launch  simu.launch
multi_uav_simulator/: CMakeLists.txt  package.xml
multi_uav_simulator/bigquad_description/: bigquad.urdf.xacro
multi_uav_simulator/cf_description/: crazyflie2.dae
multi_uav_simulator/config/: config.yaml  crazyflie_params.yaml  custom_rosconsole.conf  initial_conditions.yaml  simulation.rviz  simulation_base.rviz
multi_uav_simulator/hector_description/: hector.urdf.xacro
multi_uav_simulator/include/multi_uav_simulator/: DynamicsProvider.h  Quadrotor.h  cfSimUtils.h
multi_uav_simulator/launch/: simu.launch
multi_uav_simulator/src/: DynamicsProvider.cpp  Quadrotor.cpp  cfSimUtils.cpp
rosinstall/: dependencies.rosinstall
simulator_utils/: CMakeLists.txt  package.xml
simulator_utils/include/simulator_utils/: Drone.h  simulator_utils.h
simulator_utils/msg/: Waypoint.msg
simulator_utils/src/: Drone.cpp  simulator_utils.cpp
src/: DesiredStateProvider.cpp  DesiredStateProvider.h  Quadrotor.cpp  Quadrotor.h  Simulator.cpp  Trajectory_t.h  dynamics_provider.cpp  quadrotor.cpp
